# python-espncricinfo

./: .gitignore  Citation.cff  LICENSE.txt  README.md  changelog.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  tests.py  tests_new.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-publish.yml
docs/plans/: 2026-02-21-robust-test-suite.md  2026-02-22-fix-summary-series-player-design.md  2026-02-22-fix-summary-series-player.md  2026-02-22-match-ref-design.md  2026-02-22-match-ref.md  2026-02-22-scorecard-properties-design.md  2026-02-22-scorecard-properties.md
espncricinfo/: espncricinfo.py  exceptions.py  ground.py  livematches.py  match.py  match_ref.py  misc.py  player.py  seasons.py  series.py  summary.py  teams.py
scripts/: refresh_fixtures.py
tests/: conftest.py  test_exceptions.py  test_match.py  test_match_ref.py  test_player.py  test_series.py  test_summary.py
tests/fixtures/: match_1478914.html  match_1478914_content.json  match_1478914_innings.json  match_1478914_json.json  match_1478914_match.json  match_1478914_next_data.json  match_1478914_players.json  match_1478914_scorecard.json  match_1478914_serverComponent.php.json  match_857713.html  match_857713.json  player_253802.json  player_253802_new.json
